Description
[reactos/tools/cabman/cabinet.cxx:1581]: (warning) Possible leak in public function. The pointer 'CurrentFolderNode' is not deallocated before it is allocated.
[reactos/tools/cabman/cabinet.cxx:2065]: (error) Memory leak: FileNode
[reactos/tools/cabman/cabinet.cxx:2633]: (error) Memory leak: Node
On some failure paths some memory is leaked.
Attachments
Issue Links
- is duplicated by
-
CORE-11173 Fix leakages in ExtractFile in cabinet.cxx
-
- Resolved
-