[CABMAN] - Fix leaks in ExtractFile and avoid double frees from failure cases of AddFile. Patch by Serge Gautherie. CORE-7307 #resolve

svn path=/trunk/; revision=74301